# agent-gtd-dispatch

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  deploy.sh  pyproject.toml  release.sh  setup-dispatch-host.sh  talos-update.sh
docs/: api-docs.md  architecture.md  codebase.md  domain.md  install.md  rollouts.md  setup.md  testing.md
examples/: list_agents.claude-code.sh
scripts/: add_remote.sh  check-conventional-commit.sh  clone  migrate-repos.sh  publish-wheel.sh  setup-dispatch-user.sh  setup-git-server.sh  update-remotes.sh
src/agent_gtd_dispatch/: __init__.py  agent_discovery.py  config.py  db.py  dispatch.py  engines.py  gtd_client.py  main.py  models.py  rollout_planner.py  show_run_transcript.py  talos.py  wave_planner.py
src/agent_gtd_dispatch/wave_manager/: __init__.py  classifier.py  squash_merge.py
templates/: dispatch-api.service.tmpl  dispatch-env.tmpl  mcp-servers.sh  sudoers-dispatch-svc.tmpl
tests/: test_api.py  test_attachments_staging.py  test_branches.py  test_cancel.py  test_capabilities.py  test_db.py  test_dispatch.py  test_engine_fallback.py  test_gtd_client.py  test_manage_recovery.py  test_manage_watchdog.py  test_protocol_exports.py  test_push_verification.py  test_rollout_planner.py  test_talos.py  test_wave_manager_classifier.py  test_wave_manager_squash.py  test_wave_planner.py
tests/fixtures/: item_response.json
wave_manager/: allowlist.yaml  halt_list.yaml
