[project]
name = "agent-gtd-dispatch"
version = "1.18.1"
description = "Dispatch worker API for Agent GTD — runs headless Claude Code agents on isolated infrastructure"
requires-python = ">=3.12"
dependencies = [
    "agent-gtd-dispatch-protocol",
    "anthropic[bedrock]>=0.40",
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "pyyaml>=6",
]

[project.scripts]
agent-gtd-dispatch = "agent_gtd_dispatch.main:start"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=0.25",
    "hypothesis>=6.100",
    "pre-commit>=4",
    "python-semantic-release>=9",
    "types-pyyaml>=6",
]

[tool.uv.workspace]
members = ["packages/protocol"]

[tool.uv.sources]
agent-gtd-dispatch-protocol = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_gtd_dispatch"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]
extend-exclude = ["scripts/"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "D",     # pydocstyle
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "S603", "S607", "D", "E501"]
"src/agent_gtd_dispatch/dispatch.py" = ["S603", "S607", "S608", "E501"]
"src/agent_gtd_dispatch/main.py" = ["B008", "E501", "S104", "S603", "S607"]
"src/agent_gtd_dispatch/agent_discovery.py" = ["S603", "S607"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "aiosqlite.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
filterwarnings = [
    "error::DeprecationWarning",
]

[tool.coverage.run]
source = ["agent_gtd_dispatch", "agent_gtd_dispatch_protocol"]

[tool.coverage.report]
fail_under = 88

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version}"
build_command = "uv lock && git add uv.lock && uv build"

[tool.semantic_release.publish]
upload_to_vcs_release = false
